@@ -3,8 +3,7 @@ silence_warnings { RAILS_ENV = "test" }
 require 'application'
 require 'action_controller/test_process'
 require 'action_controller/integration'
-require 'active_record/base'
-require 'active_record/fixtures'
+require 'active_record/fixtures' if defined?(ActiveRecord::Base)
 require 'test/unit'
 
 require 'spec'
