@@ -2,7 +2,12 @@
 # Courtesy of Brian Takita and Yurii Rashkovskii
 
 $:.unshift File.join(File.dirname(__FILE__), *%w[.. .. .. .. rspec lib])
-require 'test_help'
+if defined?(ActiveRecord::Base)
+  require 'test_help' 
+else
+  require 'action_controller/test_process'
+  require 'action_controller/integration'
+end
 require 'test/unit/testresult'
 require 'spec'
 require 'spec/rails'
@@ -13,7 +18,11 @@ ActionController::Integration::Session.send(:include, Spec::Matchers)
 ActionController::Integration::Session.send(:include, Spec::Rails::Matchers)
 
 class RailsStory < ActionController::IntegrationTest
-  self.use_transactional_fixtures = true
+  if defined?(ActiveRecord::Base)
+    self.use_transactional_fixtures = true
+  else
+    def self.fixture_table_names; []; end # Workaround for projects that don't use ActiveRecord
+  end
 
   def initialize #:nodoc:
     # TODO - eliminate this hack, which is here to stop
@@ -30,12 +39,17 @@ end
 class ActiveRecordSafetyListener
   include Singleton
   def scenario_started(*args)
-    ActiveRecord::Base.send :increment_open_transactions unless Rails::VERSION::STRING == "1.1.6"
-    ActiveRecord::Base.connection.begin_db_transaction
+    if defined?(ActiveRecord::Base)
+      ActiveRecord::Base.send :increment_open_transactions unless Rails::VERSION::STRING == "1.1.6"
+      ActiveRecord::Base.connection.begin_db_transaction
+    end
   end
+
   def scenario_succeeded(*args)
-    ActiveRecord::Base.connection.rollback_db_transaction
-    ActiveRecord::Base.send :decrement_open_transactions unless Rails::VERSION::STRING == "1.1.6"
+    if defined?(ActiveRecord::Base)
+      ActiveRecord::Base.connection.rollback_db_transaction
+      ActiveRecord::Base.send :decrement_open_transactions unless Rails::VERSION::STRING == "1.1.6"
+    end
   end
   alias :scenario_pending :scenario_succeeded
   alias :scenario_failed :scenario_succeeded
